added learn,mentor and updated style

--- a/code.html
+++ b/code.html
@@ -10,6 +10,8 @@
     <!-- css file link -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="scroll.css">
+    <link rel="stylesheet" href="learn.css">
+    <link rel="stylesheet" href="mentor.css">
 
 </head>
 
@@ -26,22 +28,25 @@
     
         <span id="login">Login</span>
     </nav>
-
+    <br>
     <!-- learn for cause, code for cause -->
-    <div>
-        <h2>Learn for Cause</h2>
-        <h2>Code for Cause</h2>
-        <p>An initiative to contribute to the Open Source community by providing training, guidance, and awareness about the possibilities in the field of software to students & professionals.</p>
-        <a href="https://codeforcause.org/courses">Our Live Courses</a>
-        <img src="https://codeforcause.org/static/home/codeforcause.svg" alt="">
+    <div id="learn">
+        <span id="margin">
+        <h2 class="learnt">Learn for Cause</h2>
+        <h2 class="learnt">Code for Cause</h2>
+        
+        <p class="learnt">An initiative to contribute to the Open Source community by providing training, guidance, and awareness about the possibilities in the field of software to students & professionals.</p>
+        </span>
+        <a href="https://codeforcause.org/courses"><p id="play">Our Live Courses</p></a>
+        <img src="https://codeforcause.org/static/home/codeforcause.svg" alt="" id="code">
     </div>
 
     <!-- mentors -->
-    <div>
-        <p>Our mentors are associated with</p>
-        <img src="https://codeforcause.org/static/images/promoters/google.svg" alt="">
-        <img src="https://codeforcause.org/static/images/promoters/redhat.svg" alt="">
-        <img src="https://codeforcause.org/static/images/promoters/ibm.svg" alt="">
+    <div id="mentor">
+        <p><b>Our mentors are associated with</b></p>
+        <img src="https://codeforcause.org/static/images/promoters/google.svg" alt="" id="google">
+        <img src="https://codeforcause.org/static/images/promoters/redhat.svg" alt="" id="red">
+        <img src="https://codeforcause.org/static/images/promoters/ibm.svg" alt="" id="ibm">
     </div>
 
     <!-- Subscribe -->
